tests/errors/syn_class4.java
 public class syn_class4 }